# QCryptoHistory

./: CMakeLists.txt  README.md  conanfile.py
gui/: CMakeLists.txt  fulltransactionlist.cpp  fulltransactionlist.hpp  fulltransactionmodel.cpp  fulltransactionmodel.hpp  header.cpp  header.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  tradesmodel.cpp  tradesmodel.hpp  vectormodel.hpp
lib/: CMakeLists.txt
lib/libcryptohistory/: database.cpp  database.hpp  trade.cpp  trade.hpp  tradecomputer.cpp  tradecomputer.hpp  transaction.hpp
profiles/: qcryptohistory-win-analysis  qcryptohistory-win-test
unit_tests/: CMakeLists.txt  test_database.cpp  test_trade.cpp  test_tradecomputer.cpp
